                _              __            _   _
       _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__
      | '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \
      | | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
      |_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|

            RetroForth & nga 2024.9 Release Notes

================================================================

- general

  - added takawiri, a new listener

- toolchain

- documentation

- examples

- image

  - `HOME` (in the library code) is now a floating buffer
    above `here`

- library

  - added "tob", a text output buffer

- retro-compiler

- new nga implementations

- nga-c

  - use UTF32 internally (translating to/from UTF8 externally)
  - filesystem device no longer included if ENABLE_FILES not
    defined
  - formatting cleanups
  - added ioctl device

Future Notes

================================================================