@@ -11,6 +11,7 @@
 .Op Fl v
 .Op Fl t Ar filename
 .Op Fl f Ar filename
+.Op Fl p Ar filename
 .Op Fl u Ar filename
 .Op Fl r Ar filename
 .Op Ar filename Ar script-args
@@ -35,6 +36,8 @@ Run in verbose mode, showing debugging information. Verbose output is written to
 Run any code and test blocks in the specified file.
 .It Fl f Ar filename
 Run any code blocks in the specified file.
+.It Fl p Ar filename
+Run the code in the specified file.
 .It Fl u Ar filename
 Load and use the specified image file rather than the integral one.
 .It Fl r Ar filename
